tests/errors/intrinsics9.f90
program intrinsics9
    integer(4) :: x = 1
    integer(8) :: y = 2
    print *, iand(x, y)
end program